fixed wrap padding on taxonomy-year pages

--- a/themes/renewal-funds/sass/_history.scss
+++ b/themes/renewal-funds/sass/_history.scss
@@ -79,7 +79,6 @@
     border: 1px solid $color__brand-color-gray;
     &:hover {
     background-color: #C5C5C5;
-    background-blend-mode: multiply;
     }
 }
 
