--- a/themes/renewal-funds/sass/_page-templates-main-styles.scss
+++ b/themes/renewal-funds/sass/_page-templates-main-styles.scss
@@ -17,6 +17,7 @@ body {
 .page-header {
     font-size: 1.25rem;
     font-weight: 900;
+    text-align: center;
     h1 {
         margin: 0 0 2rem 0;
     }
